[gd_scene load_steps=7 format=2]

[ext_resource path="res://estado.png" type="Texture" id=1]
[ext_resource path="res://cmunsl.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://estado.gd" type="Script" id=3]
[ext_resource path="res://flecha.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=2]
radius = 92.0

[node name="estado" type="Node2D"]
script = ExtResource( 3 )

[node name="vinculos" type="Node2D" parent="."]

[node name="acep" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -2 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="imagen" type="Sprite" parent="."]
position = Vector2( -1, -2 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="nombre" type="Label" parent="."]
margin_left = -65.0
margin_top = -62.0
margin_right = 63.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 1 )
text = "q1"
align = 1
valign = 1

[node name="area" type="Area2D" parent="."]

[node name="hitbox" type="CollisionShape2D" parent="area"]
visible = false
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 99.0
margin_top = -83.0
margin_right = 291.0
margin_bottom = 39.0

[node name="Label" type="Label" parent="PopupMenu"]
margin_left = 11.0
margin_top = 14.0
margin_right = 97.0
margin_bottom = 96.0
text = "Propiedades

E. Aceptacion
E. Inicial"

[node name="acep" type="CheckBox" parent="PopupMenu"]
margin_left = 152.0
margin_top = 42.0
margin_right = 176.0
margin_bottom = 66.0

[node name="ini" type="CheckBox" parent="PopupMenu"]
margin_left = 152.0
margin_top = 60.0
margin_right = 176.0
margin_bottom = 84.0

[node name="Button" type="Button" parent="PopupMenu"]
margin_left = 47.0
margin_top = 89.0
margin_right = 144.0
margin_bottom = 109.0
text = "Borrar"

[node name="ini" type="Sprite" parent="."]
visible = false
position = Vector2( -184, -1.90735e-06 )
scale = Vector2( 0.591667, 0.591667 )
texture = ExtResource( 4 )

[connection signal="mouse_entered" from="area" to="." method="_on_area_mouse_entered"]
[connection signal="mouse_exited" from="area" to="." method="_on_area_mouse_exited"]
[connection signal="toggled" from="PopupMenu/acep" to="." method="_on_acep_toggled"]
[connection signal="toggled" from="PopupMenu/ini" to="." method="_on_ini_toggled"]
[connection signal="pressed" from="PopupMenu/Button" to="." method="_on_Button_pressed"]
